# OBSInfoWriter

./: .gitignore  .gitmodules  .travis.yml  Build.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTORS.md  DummyPlatform.cpp  DummyUtils.cpp  FormatUtils.cpp  FormatUtils.h  InfoWriter.cpp  InfoWriter.h  InfoWriterObsUtils.cpp  InfoWriterObsUtils.h  InfoWriterSettings.cpp  InfoWriterSettings.h  Makefile.linux  Makefile.mac  OBSInfoWriter.sln  OBSStudioInfoWriter.cpp  OutputFormat.h  README.md  SourceListWrapper.cpp  SourceListWrapper.h  buildspec.json  gitbitter.json  main.cpp
.claude/agents/: template-sync.md
.github/: FUNDING.yml
.github/scripts/: Package-Windows.ps1
.github/workflows/: build-project.yaml  build-project.yml  main.yml  push.yaml  release.yaml
DLLProject/: OBSInfoWriter.vcxproj  OBSInfoWriter.vcxproj.filters
OutputFormat/: OutputFormat.CSV.cpp  OutputFormat.CSV.h  OutputFormat.Default.cpp  OutputFormat.Default.h  OutputFormat.EDL.cpp  OutputFormat.EDL.h  OutputFormat.SRT.cpp  OutputFormat.SRT.h
TestConsoleProject/: OBSInfoWriterTestConsole.vcxproj  OBSInfoWriterTestConsole.vcxproj.filters
cmake/common/: compiler_common.cmake
cmake/linux/: compilerconfig.cmake
cmake/macos/: xcode.cmake
cmake/windows/: compilerconfig.cmake
extlibs/: libGroundfloor.lib  obs.lib
tests/: test_filename_format.cpp  test_format_utils.cpp
tests/stubs/util/: base.h  platform.h
